--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  table_calendar: ^3.0.6
   cupertino_icons: ^1.0.6
   firebase_core: ^2.31.1
   firebase_auth: ^4.19.6
@@ -41,6 +42,8 @@ dependencies:
   firebase_storage: ^11.7.6
   firebase_database: ^10.5.6
   cached_network_image: ^3.3.1
+  url_launcher: ^6.1.6
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
