--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   cached_network_image: ^3.3.1
   url_launcher: ^6.1.6
   image_picker: ^0.8.5+3
+  dio: ^4.0.0
+  flutter_polyline_points: ^2.1.0
+  google_maps_flutter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
