--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   dio: ^4.0.0
   flutter_polyline_points: ^2.1.0
   google_maps_flutter: ^2.9.0
+  geolocator: ^9.0.0
 
 dev_dependencies:
   flutter_test:
