--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.14
   table_calendar: ^3.0.6
   cupertino_icons: ^1.0.6
   firebase_core: ^2.31.1
@@ -42,12 +45,16 @@ dependencies:
   firebase_storage: ^11.7.6
   firebase_database: ^10.5.6
   cached_network_image: ^3.3.1
-  url_launcher: ^6.1.6
+  url_launcher: ^6.1.9
   image_picker: ^0.8.5+3
   dio: ^4.0.0
   flutter_polyline_points: ^2.1.0
   google_maps_flutter: ^2.9.0
   geolocator: ^9.0.0
+  flutter_tts: ^3.5.3
+  speech_to_text: ^6.6.2
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +82,7 @@ flutter:
   assets:
     - assets/Images/
     - assets/Icons/
+    - assets/knowledge_packs.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
