--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,15 @@ dependencies:
   open_file: ^3.2.1
   uuid: ^3.0.7
   flutter_webrtc: ^0.9.0
+  googleapis: ^11.0.0
+  googleapis_auth: ^1.3.0
+  http: ^0.13.3
+  fluttertoast: ^8.2.2
+  overlay_support: ^2.0.0
 
 
   path_provider: any
+  flutter_dotenv: ^5.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,9 +80,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - .env
   #   - images/a_dot_ham.jpeg
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
