--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  permission_handler: ^10.0.0
+  file_picker: ^5.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.14
