--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ FIREBASE_MESSAGING_SENDER_ID=346868082875
 FIREBASE_PROJECT_ID=mhealth-6191e
 FIREBASE_STORAGE_BUCKET=mhealth-6191e.appspot.com
 GHANA_NLP_API_KEY=8c310df9eaf6470391aaf83da367b1cd
+GOOGLE_TRANSLATE_API_KEY=AIzaSyDjfc-0icPBT7ZyMiFs8JzIV55iv5RNxXo
