--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSCameraUsageDescription</key>
+    <string>We need access to your camera for video calls</string>
     <key>NSMicrophoneUsageDescription</key>
     <string>We need your microphone to record audio messages</string>
 	<key>CFBundleDevelopmentRegion</key>
