--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-
+  shared_preferences: ^2.5.2
+  showcaseview: ^4.0.1
   flutter_tts: ^3.6.3
   permission_handler: ^10.0.0
   file_picker: ^5.0.0
@@ -53,7 +54,7 @@ dependencies:
   image_picker: ^0.8.5+3
   dio: ^4.0.0
   flutter_polyline_points: ^2.1.0
-  google_maps_flutter: ^2.9.0
+  google_maps_flutter: ^2.10.1
   geolocator: ^9.0.0
   speech_to_text: ^6.6.2
   flutter_dotenv: ^5.0.2
