--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,11 +58,17 @@ dependencies:
   geolocator: ^9.0.0
   speech_to_text: ^6.6.2
   flutter_dotenv: ^5.0.2
+  string_similarity: ^2.0.0
+  connectivity_plus: ^6.1.3
+  http: ^1.2.0
+  provider: ^6.1.5
 
   flutter_localizations:
     sdk: flutter
 
 dev_dependencies:
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
 
@@ -89,6 +95,7 @@ flutter:
     - assets/Images/
     - assets/Icons/
     - assets/knowledge_packs.json
+    - assets/emergency_procedures.json
     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
