--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   string_similarity: ^2.0.0
   connectivity_plus: ^6.1.3
   http: ^1.2.0
-  provider: ^6.1.5
+  provider: 6.1.2
 
   flutter_localizations:
     sdk: flutter
