--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   overlay_support: ^2.0.0
   fl_chart: ^0.65.0
   flutter_speed_dial: ^7.0.0
+  flutter_local_notifications: ^14.0.0+1
 
 
   path_provider: any
