--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,9 @@ dependencies:
   connectivity_plus: ^6.1.3
   http: ^1.2.0
   provider: 6.1.2
+  pdf: ^3.10.8
+  printing: ^5.12.0
+  share_plus: ^10.0.0
 
   flutter_localizations:
     sdk: flutter
