--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,9 +66,22 @@ dependencies:
   printing: ^5.12.0
   share_plus: ^10.0.0
 
-  flutter_localizations:
-    sdk: flutter
 
+
+  intl: ^0.18.0
+  open_file: ^3.2.1
+  uuid: ^3.0.7
+  flutter_webrtc: ^0.9.0
+  googleapis: ^11.0.0
+  googleapis_auth: ^1.3.0
+  fluttertoast: ^8.2.2
+  overlay_support: ^2.0.0
+  fl_chart: ^0.65.0
+  flutter_speed_dial: ^7.0.0
+  marquee: ^2.2.1
+  firebase_ml_model_downloader: ^0.2.5+6
+  tflite_flutter: ^0.10.4
+  logger: ^1.1.0
 dev_dependencies:
   hive_generator: ^2.0.0
   build_runner: ^2.3.3
