--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,10 @@
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.2.1' // ✅ Update this line
+    }
+}
+
+
 plugins {
     // Add the dependency for the Google services Gradle plugin
     id 'com.google.gms.google-services' version '4.4.1' apply false
@@ -21,3 +28,6 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+
+
