--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.4 <4.0.0'
+  sdk: '>=3.5.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,57 +34,58 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  shared_preferences: ^2.5.2
+  shared_preferences: ^2.3.4
   showcaseview: ^4.0.1
-  flutter_tts: ^3.6.3
-  permission_handler: ^10.0.0
-  file_picker: ^5.0.0
+  flutter_tts: ^4.2.2
+  permission_handler: ^11.4.0
+  file_picker: ^10.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.14
   table_calendar: ^3.0.6
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.31.1
-  firebase_auth: ^4.19.6
-  cloud_firestore: ^4.17.4
-  firebase_storage: ^11.7.6
-  firebase_database: ^10.5.6
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
+  firebase_storage: ^12.0.0
+  firebase_database: ^11.0.0
   cached_network_image: ^3.3.1
   url_launcher: ^6.1.9
-  image_picker: ^0.8.5+3
-  dio: ^4.0.0
+  image_picker: ^1.0.7
+  dio: ^5.4.1
   flutter_polyline_points: ^2.1.0
-  google_maps_flutter: ^2.10.1
-  geolocator: ^9.0.0
-  speech_to_text: ^6.6.2
+  google_maps_flutter: ^2.5.2
+  geolocator: ^13.0.4
+  speech_to_text: ^7.0.0
   flutter_dotenv: ^5.0.2
   string_similarity: ^2.0.0
   connectivity_plus: ^6.1.3
   http: ^1.2.0
-  provider: 6.1.2
+  provider: ^6.1.4
   pdf: ^3.10.8
   printing: ^5.12.0
   share_plus: ^10.0.0
+  flutter_sound: ^9.28.0
 
 
 
-  intl: ^0.18.0
+  intl: ^0.20.2
   open_file: ^3.2.1
-  uuid: ^3.0.7
-  flutter_webrtc: ^0.9.0
-  googleapis: ^11.0.0
-  googleapis_auth: ^1.3.0
+  uuid: ^4.5.1
+  flutter_webrtc: ^0.13.1+hotfix.1
+  googleapis: ^14.0.0
+  googleapis_auth: ^2.0.0
   fluttertoast: ^8.2.2
   overlay_support: ^2.0.0
-  fl_chart: ^0.65.0
+  fl_chart: ^0.70.2
   flutter_speed_dial: ^7.0.0
   marquee: ^2.2.1
-  firebase_ml_model_downloader: ^0.2.5+6
-  tflite_flutter: ^0.10.4
-  logger: ^1.1.0
+  firebase_ml_model_downloader: ^0.3.3+3
+  tflite_flutter: ^0.11.0
+  logger: ^2.5.0
 dev_dependencies:
   hive_generator: ^2.0.0
-  build_runner: ^2.3.3
+  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
 
@@ -93,7 +94,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
