Report and Block Features Implemented In ChatModule

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ FIREBASE_PROJECT_ID=mhealth-6191e
 FIREBASE_STORAGE_BUCKET=mhealth-6191e.appspot.com
 GHANA_NLP_API_KEY=8c310df9eaf6470391aaf83da367b1cd
 GOOGLE_TRANSLATE_API_KEY=AIzaSyDjfc-0icPBT7ZyMiFs8JzIV55iv5RNxXo
+NLP_API_KEY=6187b002922b42678d9913035e9608a2
+NLP_API_URL=https://translation-api.ghananlp.org/v1/translate
