--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dependencies:
   printing: ^5.12.0
   share_plus: ^10.0.0
   flutter_sound: ^9.28.0
-
+  audioplayers: ^6.4.0
 
 
   intl: ^0.20.2
@@ -114,6 +114,7 @@ flutter:
     - assets/knowledge_packs.json
     - assets/emergency_procedures.json
     - .env
+    - assets/audio/incoming_call.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
