--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.5.0 <4.0.0'
@@ -88,7 +88,9 @@ dependencies:
   tflite_flutter: ^0.11.0
   logger: ^2.5.0
   animated_splash_screen: ^1.3.0
-
+  firebase_messaging: ^15.2.6
+  flutter_local_notifications: ^19.2.1
+  cloud_functions: ^5.5.1
 
 dev_dependencies:
   hive_generator: ^2.0.0
