--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -131,8 +131,11 @@ flutter:
     - assets/emergency_procedures.json
     - .env
     - assets/audio/incoming_call.mp3
-    - assets/label_classes.json
-    - assets/symptoms.json
+    - assets/models/disease_model.tflite
+    - assets/models/disease_classes.json
+    - assets/models/symptom_classes.json
+    #- assets/disease_classes.json
+   # - assets/symptom_classes.json
     - assets/animations/medical_loading.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
