--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
     dependencies {
+        // START: FlutterFire Configuration
+        classpath 'com.google.gms:google-services:4.3.15'
+        // END: FlutterFire Configuration
         classpath 'com.android.tools.build:gradle:8.2.2' // ✅ Update this line
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20'
     }
