--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,1 @@
-{
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "runtime": "nodejs20",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
-      ]
-    }
-  ]
-}
+{"functions":[{"source":"functions","codebase":"default","runtime":"nodejs20","ignore":["node_modules",".git","firebase-debug.log","firebase-debug.*.log","*.local"],"predeploy":["npm --prefix \"$RESOURCE_DIR\" run lint"]}],"flutter":{"platforms":{"android":{"default":{"projectId":"mhealth-6191e","appId":"1:346868082875:android:189ed9cb28aca144c7e19e","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"mhealth-6191e","appId":"1:346868082875:ios:984e0bf81db5283fc7e19e","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"macos":{"default":{"projectId":"mhealth-6191e","appId":"1:346868082875:ios:c0682420bcc6d0b1c7e19e","uploadDebugSymbols":false,"fileOutput":"macos/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"mhealth-6191e","configurations":{"android":"1:346868082875:android:189ed9cb28aca144c7e19e","ios":"1:346868082875:ios:984e0bf81db5283fc7e19e","macos":"1:346868082875:ios:c0682420bcc6d0b1c7e19e","web":"1:346868082875:web:502fac14c68d4ba8c7e19e","windows":"1:346868082875:web:d8d41d5c702c8807c7e19e"}}}}}}
