--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dependencies:
   pdf: ^3.10.8
   printing: ^5.12.0
   share_plus: ^10.0.0
-  flutter_sound: ^9.28.0
+  flutter_sound: 9.27.0
   google_sign_in: ^6.2.1
   lottie: ^2.7.0
   firebase_remote_config: ^5.4.5
