--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,15 +29,22 @@ flutter_ios_podfile_setup
 
 target 'Runner' do
   use_frameworks!
+  use_modular_headers! # Required for GoogleMaps compatibility
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  target 'RunnerTests' do
-    inherit! :search_paths
-  end
+  pod 'GoogleMaps', '~> 8.4.0' # Google Maps SDK
+  pod 'Firebase/Messaging' # Fixed typo from 'od' to 'pod'
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        'PERMISSION_NOTIFICATIONS=1', # Enable notifications permission
+      ]
+    end
   end
 end
