--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,7 +90,7 @@ dependencies:
   logger: ^2.5.0
   animated_splash_screen: ^1.3.0
   firebase_messaging: ^15.2.6
-  flutter_local_notifications: ^19.2.1
+#  flutter_local_notifications: ^19.2.1
   cloud_functions: ^5.5.1
   sign_in_with_apple: ^7.0.1
 
