--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,7 @@ dependencies:
 #  flutter_local_notifications: ^19.2.1
   cloud_functions: ^5.5.1
   sign_in_with_apple: ^7.0.1
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   hive_generator: ^2.0.0
